# MahjongGod

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
src/cracked/: cli.py  danger.py  engine.py  game_state.py  hand.py  match.py  opponent_model.py  optimizer.py  policy.py  pygame_physics.py  pygame_table.py  scoring.py  shanten.py  simulator.py  tiles.py  tiles_away.py  tui.py  tui_anim_demo.py  tui_game.py  tui_physics_demo.py  tui_table.py  tui_table_faces.py  tui_tiles.py  ursina_audio.py  ursina_game.py  ursina_room.py  ursina_table.py
src/cracked/training/: data.py  experiment.py  features.py  model.py  policy_model.py  self_play.py  trainer.py
tests/: test_cli.py  test_danger.py  test_engine.py  test_features.py  test_game_state.py  test_hand.py  test_optimizer.py  test_policy.py  test_pygame_physics.py  test_pygame_table.py  test_scoring.py  test_self_play.py  test_shanten.py  test_simulator.py  test_tiles.py  test_tiles_away.py  test_training_data.py  test_tui_anim_demo.py  test_tui_physics_demo.py  test_tui_table.py  test_tui_table_faces.py  test_tui_tiles.py  test_ursina_game.py  test_ursina_table.py
