[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cracked"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1",
]
ui = [
    "textual>=0.87",
]
threed = [
    "ursina>=6.0",
    "pillow>=10.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
cracked = "cracked.cli:cli"
cracked-ui = "cracked.tui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: full game simulations (run with -m slow)"]
addopts = "-m 'not slow'"
